feat(algoW): moved algorithm w to use union finds instead of substitutions